# premosa

./: Build.sh  LICENSE  README.md  example.html  index.html  installation.html  params.json  usage.html
Fiji scripts/: RunContrastAdjustment.bsh  RunContrastAdjustment_MacOsX.bsh  gridStitching_GetTileConfig_MacOsX.bsh  gridStitching_NoTileConfig_MacOsX.bsh  gridStitching_UseFixedTileConfig.bsh  gridStitching_UseFixedTileConfig_MacOsX.bsh  gridStitching_UseTileConfig.bsh  gridStitching_UseTileConfig_MacOsX.bsh
FijiScripts/: RunContrastAdjustment.bsh  RunContrastAdjustment_MacOsX.bsh  gridStitching_GetTileConfig.bsh  gridStitching_GetTileConfig_MacOsX.bsh  gridStitching_NoTileConfig.bsh  gridStitching_NoTileConfig_MacOsX.bsh  gridStitching_UseFixedTileConfig_MacOsX.bsh  gridStitching_UseTileConfig.bsh  gridStitching_UseTileConfig_MacOsX.bsh
precompilesBinaries/Linux_64bit/: ExtendedSurfaceExtraction  FlatFieldCorrection  PreMosa  SurfaceExtraction
precompilesBinaries/MaxOSX_10.10/: ExtendedSurfaceExtraction  FlatFieldCorrection  PreMosa  SurfaceExtraction
src/: CMakeLists.txt
src/ExtendedSurfaceExtraction/: CMakeLists.txt
src/ExtendedSurfaceExtraction/inc/: HelperFunctions.h  Interpolation.h  ZPlaneSelection.h  ZProjection.h
src/ExtendedSurfaceExtraction/src/: Filter.cpp  HelperFunctions.cpp  Interpolation.cpp  Refinement.cpp  ZPlaneSelection.cpp  ZProjection.cpp  main.cpp
src/FlatFieldCorrection/: CMakeLists.txt
src/FlatFieldCorrection/src/: main.cpp
src/HelperFunctions/: CMakeLists.txt
src/HelperFunctions/inc/: MylibValues.h  VectorFunctions.h
src/HelperFunctions/src/: MylibValues.cpp  VectorFunctions.cpp
src/PreMosa/: CMakeLists.txt
src/PreMosa/inc/: AdjustHistogram.h  ConversionTo8bit.h  Correlation.h  FileHandling.h  Filter.h  FilterFFTW.h  ImageClass.h  Interpolation.h  LocalIntegrals.h  ParseXML.h  Pipeline.h  Refinement.h  ShowArray.h  ZPlaneSelection.h  ZProjection.h
src/PreMosa/src/: AdjustHistogram.cpp  ConversionTo8bit.cpp  Correlation.cpp  FileHandling.cpp  Filter.cpp  FilterFFTW.cpp  ImageClass.cpp  Interpolation.cpp  LocalIntegrals.cpp  ParseXML.cpp  Pipeline.cpp  Refinement.cpp  ShowArray.cpp  ZPlaneSelection.cpp  ZProjection.cpp  main.cpp
src/PreMosa/src/Gui/: QtMainWindow.ui
src/Projection/: CMakeLists.txt
src/ProjectionLibrary/: CMakeLists.txt
src/ProjectionLibrary/inc/: Develop.h  ExtendedProjectionAlgorithm.h  Filter.h  HeightMapAnalysis.h  Interpolation.h  Parameter.h  ProjectionAlgorithm.h  RasterizedImage.h  Refinement.h  ShowArray.h  ZPlaneSelection.h  ZProjection.h
src/ProjectionLibrary/src/: ExtendedProjectionAlgorithm.cpp  Filter.cpp  HeightMapAnalysis.cpp  Interpolation.cpp  Parameter.cpp  ProjectionAlgorithm.cpp  RasterizedImage.cpp  Refinement.cpp  ShowArray.cpp  ZPlaneSelection.cpp  ZProjection.cpp  main.cpp
src/ProjectionUsingHeightMap/: CMakeLists.txt
src/ProjectionUsingHeightMap/inc/: Analysis.h  Develop.h  Filter.h  ImageClass.h  Refinement.h
src/ProjectionUsingHeightMap/src/: Analysis.cpp  ImageClass.cpp  main.cpp
src/SurfaceExtraction/: CMakeLists.txt
src/SurfaceExtraction/src/: main.cpp
src/TinyXML/: CMakeLists.txt
src/mylib/: CMakeLists.txt  Makefile  array.c  array.h  array.p  cdf.p  connectivity.c  connectivity.p  draw.p  fct.min.p  fct.root.p  fft.p  filters.c  filters.h  filters.p  generator  hash.p  histogram.p  image.c  image.h  image.p  level.set.p  linear.algebra.p  mylib.h  mylib.p  paths.p  region.c  region.h  region.p  snake.p  svg.p  swc.p  utilities.h  water.shed.c  water.shed.p
src/mylib/DOCUMENTS/: BUILDME  README
src/mylib/DOCUMENTS/HTML/: AForm.html  AllFunctions.html  AllPages.html  Array.html  Band_Factor.html  CDF.html  Connectivity.html  Convolver.html  Correlation.html  Distance.html  Draw.html  Fast.html  Filters.html  Frame.html  Function.html  Generic.html  Hash_Table.html  Histogram.html  Image.html  LU_Factor.html  Level_Tree.html  Linear.html  Mylib.html  Partition.html  Region.html  Root.html  SVG.html  SWC_Tree.html  Shortest.html  Slice.html  System.html  Tiff.html  Watershed.html  mydoc.css
src/mylib/DOCUMENTS/HTML/IMAGES/.svn/: all-wcprops  entries
src/mylib/DOCUMENTS/HTML/IMAGES/.svn/text-base/: Border.Reflect.jpg.svn-base  Border.Zero.jpg.svn-base  SVG.Arrows.svg.svn-base  SVG.Colors.svg.svn-base  SVG.Fonts.svg.svn-base  Surfaces.jpg.svn-base
src/mylib/DOCUMENTS/PPT/: Mylib.Powerpoint.ppt
src/mylib/MY_FFT/: CMakeLists.txt  Makefile  README  cmake_install.cmake  fft.D.c  fft.D.h  fft.F.c  fft.F.h  myfft.c  test.fft.c  test.norm.D.c  test.norm.F.c
src/mylib/MY_TIFF/: CMakeLists.txt  Makefile  README  app.color.c  app.mrc2.c  app.tagger.c  cmake_install.cmake  generator.c  mytiff_generator  tiff.image.c  tiff.image.h  tiff.image.p  tiff.io.c  tiff.io.h  tiff.io.p  tiffRGB  tiffconvert  tiffshow  tifftagger  utilities.c  utilities.h  utilities.p
stylesheets/: styles.css
