CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(ImagePreprocessing)

SET(CMakeProject_BIN_DIR CACHE PATH "CMakeProject build directory")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMakeProject_BIN_DIR})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMakeProject_BIN_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMakeProject_BIN_DIR})

SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${OpenMP_CXX_FLAGS}")

########### Operating system specific #############
message("Operating system: ${CMAKE_SYSTEM_NAME}")

# Mac Os X specific code
IF(APPLE)
	set(CMAKE_CXX_STANDARD 11)
endif()
 
# Windows specific code
IF(MSVC_IDE)
  ADD_DEFINITIONS(-D_UNICODE -DUNICODE)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR- /W4 /EHsc /MP /Zi")
  SET(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} /GR- /W4 /EHsc /MP /Zi")
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMakeProject_BIN_DIR})
  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMakeProject_BIN_DIR})
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMakeProject_BIN_DIR})
  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMakeProject_BIN_DIR})
  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMakeProject_BIN_DIR})
  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMakeProject_BIN_DIR})
  SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /DEBUG /OPT:ICF /OPT:REF")
  SET(CMAKE_STATIC_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /DEBUG /OPT:ICF /OPT:REF")
  SET(CMAKE_EXE_LINKER_FLAGS_RELEASE "/INCREMENTAL:NO /DEBUG /OPT:ICF /OPT:REF")
ENDIF()
 
# Linux specific code
IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    SET(OperatingSystem "Linux")
    SET(CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -std=c++11 -g -Wall")
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")

SET(CMakeProject_MYLIB_INC ${PROJECT_SOURCE_DIR}/mylib)
SET(CMakeProject_HELPERFUNCTIONS_INC ${PROJECT_SOURCE_DIR}/HelperFunctions/inc)
SET(CMakeProject_TINYXML_INC ${PROJECT_SOURCE_DIR}/TinyXML/inc)
SET(CMakeProject_PROJECTIONLIBRARY_INC ${PROJECT_SOURCE_DIR}/ProjectionLibrary/inc)
SET(CMakeProject_FLATFIELDCORRECTION_INC ${PROJECT_SOURCE_DIR}/FlatFieldCorrection/inc)
SET(CMakeProject_SURFACEEXTRACTION_INC ${PROJECT_SOURCE_DIR}/SurfaceExtraction/inc)
SET(CMakeProject_EXTENDEDSURFACEEXTRACTION_INC ${PROJECT_SOURCE_DIR}/ExtendedSurfaceExtraction/inc)
SET(CMakeProject_PREMOSA_INC ${PROJECT_SOURCE_DIR}/PreMosa/inc)

SET(CMakeProject_MYLIB mylib)
SET(CMakeProject_HELPERFUNCTIONS HelperFunctions)
SET(CMakeProject_PROJECTIONLIBRARY ProjectionLibrary)
SET(CMakeProject_XMLLIBRARY TinyXML)


SET(CMAKE_DEBUG_POSTFIX d)

ADD_SUBDIRECTORY(mylib)
ADD_SUBDIRECTORY(HelperFunctions)
ADD_SUBDIRECTORY(TinyXML)
ADD_SUBDIRECTORY(ProjectionLibrary)
ADD_SUBDIRECTORY(FlatFieldCorrection)
ADD_SUBDIRECTORY(SurfaceExtraction)
ADD_SUBDIRECTORY(ExtendedSurfaceExtraction)
ADD_SUBDIRECTORY(PreMosa)
